- Updated Button.module.css to adjust menu styles. - Enhanced HourlyForecast component to close dropdown on click away. - Modified HourlyMenu component to accept a ref for dropdown management. - Increased z-index for UnitsMenu to ensure visibility.

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -38,7 +38,8 @@
 	background-size: contain;
 }
 
-.unitsMenu::after, .hourlyMenu::after {
+.unitsMenu::after,
+.hourlyMenu::after {
 	content: '';
 	position: absolute;
 	right: var(--spacing-175, 14px);
@@ -66,4 +67,5 @@
 	justify-content: flex-start;
 	border-radius: 8px;
 	background: var(--colors-neutral-600, #3c3b5e);
+	width: 159px;
 }
