--- a/src/components/UnitsMenu/UnitsMenu.module.css
+++ b/src/components/UnitsMenu/UnitsMenu.module.css
@@ -1,5 +1,6 @@
 .unitsMenu {
 	position: absolute;
+	z-index: 9999;
 	right: 0;
 	top: 55px;
 	display: flex;
